--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,12 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
+    implementation 'com.github.MKergall:osmbonuspack:6.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
