all recordings will now be saved as json files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -28,10 +30,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CalibrateActivity"
+            android:name=".RecordsActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.CALIBRATE" />
+                <action android:name="android.intent.action.RECORDS" />
             </intent-filter>
         </activity>
         <activity
